--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "type":"module",
-  "main": "server.js",
-  "script":{
-    "start":"node server.js"
-  },
+
+    "main": "back-end/server.js",
+    "scripts": {
+      "start": "node back-end/server.js"
+    },
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
